# advent23

./: .gitignore  Cargo.toml  README.md  go.work
02/go02/: main.go
02/go02/part1/: part1.go
02/go02/part2/: part2.go
03/go03/part1/: part1_test.go
03/go03/part2/: part2_test.go
05/rust05/: Cargo.toml
06/rust06/: Cargo.toml
07/rust07/: Cargo.toml
08/rust08/: Cargo.toml
09/rust09/: Cargo.toml
10/rust10/: Cargo.toml
11/rust11/: Cargo.toml
12/rust12/: Cargo.toml
12/rust12/src/: lib.rs
13/rust13/: Cargo.toml
14/rust14/: Cargo.toml
15/rust15/: Cargo.toml
17/rust17/: Cargo.toml
2022/: README.md
2022/01/c/: calorie.c  calorie2.c
2022/01/rust01/: Cargo.toml
2022/02/c/: rps.c  rps2.c
2022/02/rust02/: Cargo.toml
2022/03/c/: ruck.c  ruck2.c
2022/03/rust03/: Cargo.toml
2022/04/c/: clean.c  clean2.c
2022/04/rust04/: Cargo.toml
2022/05/c/: supply.c  supply2.c
2022/05/rust05/: Cargo.toml
2022/06/c/: marker.c  marker2.c
2022/06/rust06/: Cargo.toml
2022/07/rust07/: Cargo.toml
2022/08/rust08/: Cargo.toml
2022/09/rust09/: Cargo.toml
2022/10/rust10/: Cargo.toml
2023/: README.md
2023/01/go01/: go.mod  main.go
2023/01/rust01/: Cargo.toml
2023/02/go02/: go.mod
2023/02/rust02/: Cargo.toml
2023/03/go03/: go.mod  main.go
2023/03/rust03/: Cargo.toml
2023/04/rust04/: Cargo.toml
2023/05/rust05/: Cargo.toml
2023/06/rust06/: Cargo.toml
2023/07/rust07/: Cargo.toml
2023/08/rust08/: Cargo.toml
2023/09/rust09/: Cargo.toml
2023/24/rust24/: Cargo.toml
21/rust21/: Cargo.toml
23/rust23/: Cargo.toml
(+156 files in other folders)
