[package]
name = "rust24_23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true

[target.'cfg(not(windows))'.dependencies]
z3 ={ version = "0.12.1", features = ["static-link-z3"]}
